-------------------------------------------------------------------------------
CorsixTH 0.68.0 - released xxxx 2024
-------------------------------------------------------------------------------
# New Features/Enhancements
* In-game movies now play for users using TH Data directly from a .ISO file
* Custom campaign creators can now optionally use the original level advance
  movie when progressing through the campaign
* The Map Editor has received some love including new features, fixes, and
  jukebox controls
* You can now control the Jukebox from the Main Menu by going to
  Options > Jukebox
* External (non-TH) XMI files are now supported by the Jukebox
* The adviser now tells you the cost of replacing your machine if you cannot
  currently afford it
* More cheats!
* [Experimental] Right mouse panning can now be used instead of using the
  middle mouse button. Enable it in the configuration file
* [Experimental] We’re closer to fully implementing falling actions! Get a
  sneak peek and get the chance to push people over by enabling it in the
  configuration file/debug menu

# Changes
* The demo movie will no longer play and cause jumpscares at the main menu if
  the CorsixTH window is not in focus 
* Game speeds are now more closely aligned with the original game
* Improvements to handling of win/lose conditions, and the progress report
* Staff tiredness levels are now taken from the level config file based on
  difficulty level of the main campaign
* You can no longer win a level if you still have outstanding loans
* Emergencies will now be announced once patients actually begin arriving
  instead of at the start
* Errors with music playback will now attempt to provide more helpful
  information in the console
* Level briefings now show before the in-game tutorial
* The first patient of a level will now arrive faster after opening the
  hospital
* The information dialog box is now more closely aligned with the original game