@@ -104,6 +104,7 @@ Copyright (C) 2024 Ikko E. "eltociear" Ashimine
 Copryight (C) 2024 Anthony Dillon
 Copyright (C) 2024 SebastianoPistore
 Copryight (C) 2024 jetenergy
+Copyright (C) 2024 Yurii "JurecStrongman"
 
 et al.
 
